// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workers/global/config/parse/env .getConfig(env) supports Azure DevOps 1`] = `
{
  "endpoint": "an Azure DevOps endpoint",
  "hostRules": [],
  "platform": "azure",
  "token": "an Azure DevOps token",
}
`;

exports[`workers/global/config/parse/env .getConfig(env) supports Bitbucket token 1`] = `
{
  "endpoint": "a bitbucket endpoint",
  "hostRules": [],
  "password": "app-password",
  "platform": "bitbucket",
  "username": "some-username",
}
`;

exports[`workers/global/config/parse/env .getConfig(env) supports Bitbucket username/password 1`] = `
{
  "endpoint": "a bitbucket endpoint",
  "hostRules": [],
  "password": "app-password",
  "platform": "bitbucket",
  "username": "some-username",
}
`;

exports[`workers/global/config/parse/env .getConfig(env) supports GitHub custom endpoint 1`] = `
{
  "endpoint": "a ghe endpoint",
  "hostRules": [],
}
`;

exports[`workers/global/config/parse/env .getConfig(env) supports GitHub custom endpoint and github.com 1`] = `
{
  "endpoint": "a ghe endpoint",
  "hostRules": [
    {
      "hostType": "github",
      "matchHost": "github.com",
      "token": "a github.com token",
    },
  ],
  "token": "a ghe token",
}
`;

exports[`workers/global/config/parse/env .getConfig(env) supports GitHub custom endpoint and gitlab.com 1`] = `
{
  "endpoint": "a ghe endpoint",
  "hostRules": [],
  "token": "a ghe token",
}
`;

exports[`workers/global/config/parse/env .getConfig(env) supports GitHub token 1`] = `
{
  "hostRules": [],
  "token": "github.com token",
}
`;

exports[`workers/global/config/parse/env .getConfig(env) supports GitLab custom endpoint 1`] = `
{
  "endpoint": "a gitlab endpoint",
  "hostRules": [],
  "platform": "gitlab",
  "token": "a gitlab token",
}
`;

exports[`workers/global/config/parse/env .getConfig(env) supports GitLab token 1`] = `
{
  "hostRules": [],
  "platform": "gitlab",
  "token": "a gitlab.com token",
}
`;
